fix letter spacing

--- a/src/components/Graph/styles.module.scss
+++ b/src/components/Graph/styles.module.scss
@@ -3,6 +3,7 @@
 
   small {
     text-transform: uppercase;
+    letter-spacing: 1px;
   }
 
   .graph {
