--- a/src/components/Slider/styles.scss
+++ b/src/components/Slider/styles.scss
@@ -40,6 +40,7 @@
             background: var(--c-background-200);
             font-size: 1.4rem;
             line-height: 2rem;
+            letter-spacing: 1.4px;
             
             opacity: 0;
             
