--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -49,6 +49,7 @@ p {
 small {
   font-size: 1.3rem; 
   line-height: 1.6rem;
+  letter-spacing: 1.4px;
 }
 
 caption {
